# TeamTalk

./: .gitignore  README.md
ios/: Podfile
ios/TeamTalk.xcodeproj/: project.pbxproj
ios/TeamTalk/Config/: MTTConfig.h
mac/: Podfile
mac/TeamTalk.xcodeproj/: project.pbxproj
server/: CMakeLists.txt
server/cfg/: msgserver.conf
server/module/: curl.cmake  hiredis.cmake  jsoncpp.cmake  openssl.cmake  protobuf.cmake  spdlog.cmake  yaml-cpp.cmake
server/src/: CMakeLists.txt  README.md
server/src/base/: CMakeLists.txt  public_define.h
server/src/db_proxy_server/: CMakeLists.txt  CachePool.cpp  DBPool.cpp  HandlerMap.cpp  ProxyConn.cpp  ProxyTask.h  db_proxy_server.cpp
server/src/db_proxy_server/business/: AudioModel.cpp  AudioModel.h  DepartAction.cpp  FileAction.cpp  FileModel.cpp  GroupAction.cpp  GroupMessageModel.cpp  GroupMessageModel.h  GroupModel.cpp  InterLogin.cpp  Login.cpp  MessageContent.cpp  MessageCounter.cpp  MessageModel.cpp  MessageModel.h  RecentSession.cpp  RelationModel.cpp  RelationModel.h  SessionModel.cpp  UserAction.cpp  UserModel.cpp
server/src/file_server/: CMakeLists.txt  file_client_conn.cpp  file_msg_server_conn.cpp  file_server.cpp  offline_file_util.h  transfer_task.cpp  transfer_task.h  transfer_task_manager.cpp
server/src/http_msg_server/: CMakeLists.txt  DBServConn.cpp  HttpConn.cpp  HttpPdu.h  HttpQuery.cpp  RouteServConn.cpp  http_msg_server.cpp
server/src/libbase/: BaseSocket.cpp  CMakeLists.txt  ConfigFileReader.cpp  EventDispatch.cpp  HttpClient.cpp  SSLSocket.cpp  ThreadPool.cpp  imconn.cpp  ostype.h  util.cpp  util.h
server/src/libsecurity/: CMakeLists.txt
server/src/login_server/: CMakeLists.txt  HttpConn.cpp  HttpConn.h  LoginConn.cpp  login_server.cpp
server/src/msfs/: CMakeLists.txt  FileManager.cpp  FileManager.h  HttpConn.cpp  HttpConn.h  main.cpp
server/src/msg_server/: CMakeLists.txt  DBServConn.cpp  FileHandler.cpp  FileServConn.cpp  GroupChat.cpp  ImUser.cpp  LoginServConn.cpp  MsgConn.cpp  PushServConn.cpp  RouteServConn.cpp  jsonxx.cpp  msg_server.cpp
server/src/pb/protocol/: IM.BaseDefine.pb.cc  IM.BaseDefine.pb.h  IM.Buddy.pb.cc  IM.Buddy.pb.h  IM.File.pb.cc  IM.File.pb.h  IM.Group.pb.cc  IM.Group.pb.h  IM.Login.pb.cc  IM.Login.pb.h  IM.Message.pb.cc  IM.Message.pb.h  IM.Other.pb.cc  IM.Other.pb.h  IM.Server.pb.cc  IM.Server.pb.h  IM.SwitchService.pb.cc  IM.SwitchService.pb.h
server/src/pkg/base/: ImPduBase.h  ServInfo.h  http_parser.h  slog.h  util.h
server/src/push_server/: CMakeLists.txt  apns_msg.cpp  push_app.cpp  push_define.h  push_server.cpp  push_server_handler.cpp  push_session_handler.cpp
server/src/push_server/sigslot/: sigslot.h
server/src/push_server/socket/: base_io_stream.cpp  epoll_io_loop.cpp  io_loop.cpp  socket_io_define.h  ssl_client_async.cpp  tcp_client_async.cpp  tcp_server.cpp  tcp_session_async.cpp
server/src/route_server/: CMakeLists.txt  RouteConn.cpp  route_server.cpp
server/src/security/: CMakeLists.txt
(+2 files in other folders)
