cmake_minimum_required(VERSION 3.12)
PROJECT(security)
AUX_SOURCE_DIRECTORY(. SRC_LIST)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/run/lib)

if(WIN32)
ADD_DEFINITIONS()
else()
ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON -DSERVER)

endif()

ADD_LIBRARY(security STATIC ${SRC_LIST})

